--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -6,7 +6,7 @@
     <ng-container matColumnDef="producto">
       <th mat-header-cell *matHeaderCellDef> Producto </th>
       <td mat-cell *matCellDef="let element" (click)="onClickRow(element)">
-          {{element.producto}}
+          {{element.product}}
       </td>
     </ng-container>
 
@@ -14,13 +14,13 @@
       <th mat-header-cell *matHeaderCellDef> 
           Precio </th>
       <td mat-cell *matCellDef="let element" (click)="onClickRow(element)">
-          {{element.precioProducto}}
+          {{element.price}}
       </td>
     </ng-container>
 
     <ng-container matColumnDef="vendedor">
       <th mat-header-cell *matHeaderCellDef> Vendedor </th>
-      <td mat-cell *matCellDef="let element" (click)="onClickRow(element)"> {{element.nombreVendedor}} </td>
+      <td mat-cell *matCellDef="let element" (click)="onClickRow(element)"> {{element.fname}} {{element.lname}} </td>
     </ng-container>
 
     <ng-container matColumnDef="delete">
