--- a/src/app/product-form/product-form.component.html
+++ b/src/app/product-form/product-form.component.html
@@ -24,4 +24,5 @@
       </mat-form-field>
     </div>
       <button type="submit">Submit</button>
+      <button (click)="onNavigateBack()">Cancel</button>
 </form>
