--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -34,6 +34,17 @@
             </div>
         </td>
       </ng-container>
+      <ng-container matColumnDef="details">
+        <th mat-header-cell *matHeaderCellDef> 
+        </th>
+        <td mat-cell *matCellDef="let element" >
+            <div (click)="onGetProductDetails(element)">
+                <span class="material-icons">
+                    edit
+                </span>
+            </div>
+        </td>
+      </ng-container>
   
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
